yamls/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue
spec:
  selector:
    matchLabels:
      app: nginx
      run: bluegreen
      group: blue
  replicas: 9
  template:
    metadata:
      labels:
        app: nginx
        run: bluegreen
        group: blue
    spec:
      containers:
      - name: nginx-blue
        image: avoitov/app_blue:0.0.8
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        #livenessProbe:
        #  failureThreshold: 3
        #  httpGet:
        #    port: 80
        #    path: /
        volumeMounts:
          - name: index-blue-html
            mountPath: "/usr/share/nginx/html/index.html"
            subPath: index.html
          - name: nginx-conf
            mountPath: "/etc/nginx/nginx.conf"
            subPath: nginx.conf

      volumes:
        - name: index-blue-html
          configMap:
              name: index-blue-html
        - name: nginx-conf
          configMap:
            name: nginx-conf
