yamls/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centos
spec:
  selector:
    matchLabels:
      app: centos
  template:
    metadata:
      labels:
        app: centos
    spec:
      containers:
      - name: centos
        image: centos:8
        command: [ "/bin/bash" ]
        args: ["-c", "while true; do echo 1; done"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "700m"
        ports:
        - containerPort: 22
