yamls/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # haproxy.org/cookie-persistence: ServerLNB
    ingress.class: haproxy
    haproxy-ingress.github.io/balance-algorithm: roundrobin
    haproxy-ingress.github.io/blue-green-deploy: group=blue=1,group=green=1
    haproxy-ingress.github.io/blue-green-mode: pod
  name: nginx-lnb-api
spec:
  ingressClassName: haproxy
  rules:
  - host: api.viaf.pp.ua
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - api.viaf.pp.ua
    secretName: api.viaf.pp.ua
