yamls/app_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pods-to-ingress
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  #  - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
      - podSelector:
          matchLabels:
            app.kubernetes.io/instance: argocd-haproxy-ingress
  #egress:
  #  - to:
  #    - namespaceSelector:
  #        matchLabels:
  #          kubernetes.io/metadata.name: kube-system
  #    - podSelector:
  #        matchLabels:
  #          app.kubernetes.io/instance: argocd-haproxy-ingress
